# PeekaUsage

./: AGENTS.md  CLAUDE.md  README.en.md  README.md  index.html  package-lock.json  package.json
.github/release-notes/: README.md  v0.1.10.md  v0.1.5.md  v0.1.6.md  v0.1.7.md  v0.1.8.md  v0.1.9.md
.github/workflows/: ci.yml  release.yml
scripts/: generate-icons.mjs
src/: App.tsx  App.vue  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: mod.rs  provider_commands.rs  taskbar_commands.rs  update_commands.rs  window_commands.rs
src-tauri/src/config/: app_config.rs  encryption.rs  mod.rs
src-tauri/src/providers/: anthropic.rs  mod.rs  openai.rs  openrouter.rs  subscription.rs  traits.rs  types.rs
src-tauri/src/tray/: mod.rs
src/assets/styles/: common.css  main.css  settings.css  variables.css  widget.css
src/components/common/: AppSelect.vue  ConfirmDialog.vue  EdgeDockHandle.tsx  ProviderIcon.vue  TitleBar.tsx  TitleBar.vue
src/components/settings/: ApiKeyInput.vue  ProviderConfig.tsx  ProviderConfig.vue  SettingsPanel.tsx  SettingsPanel.vue
src/components/widget/: OpacityHandle.vue  ProviderCard.tsx  ProviderCard.vue  RateLimitBadge.vue  SubscriptionBadge.tsx  SubscriptionBadge.vue  (+3 more)
src/composables/: usePolling.ts  useProviders.ts  useWindowControls.ts
src/i18n/: index.ts  messages.ts
src/stores/: providerStore.ts  settingsStore.ts
src/types/: provider.ts  settings.ts
src/utils/: ipc.ts  windowBounds.ts
