[package]
name = "ai-usage-monitor"
version = "0.1.0"
description = "AI API 用量监控桌面小浮窗"
authors = ["you"]
edition = "2021"

[lib]
name = "ai_usage_monitor_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-store = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
tokio = { version = "1", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
async-trait = "0.1"
thiserror = "2"
log = "0.4"
env_logger = "0.11"
base64 = "0.22"
